# tips-api

./: ..gitignore.swp  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
creator/: models.py
patron/: models.py
payments/: urls.py  views.py
